setup is working

--- a/packages/twenty-server/.env.example
+++ b/packages/twenty-server/.env.example
@@ -8,6 +8,8 @@ CODE_INTERPRETER_TYPE=local
 IS_WORKSPACE_CREATION_LIMITED_TO_SERVER_ADMINS=false
 
 FRONTEND_URL=http://localhost:3001
+IS_MULTIWORKSPACE_ENABLED=true
+
 
 # ———————— Optional ————————
 # PORT=3000
